fixed maven test for JDK9 (compiler / surefire args)